// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterComparable renders restrict to number 1`] = `
<styled.div>
  <Component>
    <Component>
      Указать значение параметра:
    </Component>
    <ComparableInput
      behavior="restrictToNumber"
      condition={
        Object {
          "operator": "==",
          "value": "",
        }
      }
      onChange={[Function]}
    />
  </Component>
  <Component />
  <Component>
    <Component
      disabled={true}
      onClick={[Function]}
    />
  </Component>
</styled.div>
`;

exports[`FilterComparable renders restrict to unsigned int 1`] = `
<styled.div>
  <Component>
    <Component>
      Указать значение параметра:
    </Component>
    <ComparableInput
      behavior="restrictToUnsignedInt"
      condition={
        Object {
          "operator": "==",
          "value": "",
        }
      }
      onChange={[Function]}
    />
  </Component>
  <Component />
  <Component>
    <Component
      disabled={true}
      onClick={[Function]}
    />
  </Component>
</styled.div>
`;
